removed unnecessary packages

--- a/LVO Electrode Design Tool.ipynb
+++ b/LVO Electrode Design Tool.ipynb
@@ -16,16 +16,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import os\n",
-    "import matplotlib as mpl\n",
-    "from matplotlib.ticker import ScalarFormatter\n",
-    "from mpl_toolkits.axes_grid1.inset_locator import inset_axes\n",
-    "from mpl_toolkits.mplot3d import Axes3D\n",
-    "from matplotlib import gridspec"
+    "import os"
    ]
   },
   {
