updated article link

--- a/LVO Electrode Design Tool.ipynb
+++ b/LVO Electrode Design Tool.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,8 @@
     "aed_col = 'Electrode Areal Energy Density (Wh/cm2)'\n",
     "apd_col = 'Electrode Areal Power Density (W/cm2)'\n",
     "ced_col = 'Cell Volumetric Energy Density (Wh/cm3)'\n",
-    "cpd_col = 'Cell Volumetric Power Density (W/cm3)'"
+    "cpd_col = 'Cell Volumetric Power Density (W/cm3)'\n",
+    "cap_col = 'Capacity (mAh/g)'"
    ]
   },
   {
@@ -124,13 +125,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/karthikmayilvahanan/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:2: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n",
+      "  \n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f28ce89225e74d438663033242ff3170",
+       "model_id": "4052f8316d3d449e918227dcde7c465f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -144,7 +153,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "401f0ec6c09443f3a331535f25ebe29c",
+       "model_id": "7224190bb1c84b5183a21c99c1f76598",
        "version_major": 2,
        "version_minor": 0
       },
@@ -163,6 +172,7 @@
     "def plot_optimization(optimization_metric,sensitivity):\n",
     "    for ax in axi:\n",
     "        ax.clear()\n",
+    "        ax.grid(True)\n",
     "    \n",
     "    # load all data\n",
     "    drop_cols = ['Bind Loading (g)', 'Cathode Volume (cm3)','Vol Frac Bind','mAh_exp','tstep (s)',\n",
@@ -188,14 +198,17 @@
     "    best_cols = ['Porosity','Vol Frac Cond','L (um)']\n",
     "    output_labels = [r'Cell $E_V$ ($\\frac{Wh}{L}$)',r'$E_A$ ($\\frac{Wh}{m^2}$)']\n",
     "\n",
-    "    all_sims_that_ran,new_design_parameter = OHF.change_units(all_sims_that_ran,design_parameter)\n",
+    "    if design_parameter != cap_col:\n",
+    "        all_sims_that_ran,new_design_parameter = OHF.change_units(all_sims_that_ran,design_parameter)\n",
+    "    else:\n",
+    "        new_design_parameter = design_parameter\n",
     "    best_df = OHF.design_guide_plots(all_sims_that_ran,best_cols,[axi[0],axi[1],axi[2]],optimize_output=new_design_parameter,color='blue')\n",
     "    # for pp in [0.9]:\n",
     "    pp = sensitivity\n",
     "    OHF.plot_percentile(all_sims_that_ran,best_cols,[axi[0],axi[1],axi[2]],color='blue',percentile=pp,optimize_output=new_design_parameter)\n",
     "\n",
     "\n",
-    "    axi[0].set_ylim(0,1)\n",
+    "    axi[0].set_ylim(0,axi[0].get_ylim()[1]*1.1)\n",
     "    axi[0].set_ylabel(r'Optimal $\\epsilon$')\n",
     "\n",
     "    axi[1].axhline(y=0.05,linestyle='--',color='black',lw=2,marker='')\n",
@@ -213,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {
     "code_folding": []
    },
@@ -252,7 +265,7 @@
     "            sims = sims.loc[sims[col]==col_vals.flat[np.abs(col_vals - val).argmin()]]\n",
     "        return sims.loc[sims['C-rate (1/h)']==c_rate]\n",
     "        \n",
-    "    def rate_capability(self,ax=None):\n",
+    "    def rate_capability(self,ax=None,metric='Capacity (mAh/g)'):\n",
     "        best_cols = ['Porosity','Vol Frac Cond','L (um)']\n",
     "        sims = all_sims_that_ran.copy()\n",
     "        for col,val in zip(best_cols,[self.eps,self.vfc,self.L]):\n",
@@ -260,10 +273,10 @@
     "            sims = sims.loc[sims[col]==col_vals.flat[np.abs(col_vals - val).argmin()]]\n",
     "        if ax is not None:\n",
     "            lab = 'L = '+str(int(sims['L (um)'].values[0]))+r', $\\epsilon$ =' + str(np.round(sims['Porosity'].values[0],2))+r', $\\widebar{v}_{CNT}$ ='+ str(np.round(sims['Vol Frac Cond'].values[0],2))\n",
-    "            ax.plot(sims['C-rate (1/h)'],sims['Capacity (mAh/g)'],'-o',label=lab)\n",
+    "            ax.plot(sims['C-rate (1/h)'],sims[metric],'-o',label=lab)\n",
     "            ax.set_xlabel('C-rate (1/h)')\n",
-    "            ax.set_ylabel('Capacity (mAh/g)')\n",
-    "        return sims[['C-rate (1/h)','Capacity (mAh/g)']]\n",
+    "            ax.set_ylabel(metric)\n",
+    "        return sims[['C-rate (1/h)',metric]]\n",
     "#     def active_material_mass(self):\n",
     "    \n",
     "#     def conductor_mass(self):\n",
@@ -299,13 +312,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/karthikmayilvahanan/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:1: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d54eeaf89ff84aefba966463d92497f2",
+       "model_id": "a892f3881d2c4f148f63e2a72a5095e3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -319,7 +340,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "909dbe1f092140358ee38ab2568fe373",
+       "model_id": "e02ce1d3c20e4c5b93c2657519a3a701",
        "version_major": 2,
        "version_minor": 0
       },
@@ -334,13 +355,14 @@
    "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(10, 4),constrained_layout=True)\n",
     "fig.suptitle('Rate Capability')\n",
-    "@widgets.interact_manual(porosity=(0.1, 0.9,0.01),L_um=(50,500,10),vol_frac_cond=(0.01,0.2,0.01),Clear_Plot=False)\n",
+    "@widgets.interact_manual(porosity=(0.1, 0.9,0.01),L_um=(50,500,10),vol_frac_cond=(0.01,0.2,0.01),\n",
+    "                         Clear_Plot=False,metric=[cap_col,ed_col,aed_col,ced_col,pd_col,apd_col,cpd_col])\n",
     "# @widgets.interact_manual(choose_eps,choose_L,choose_vfc)\n",
-    "def plot_RC(L_um,porosity,vol_frac_cond,Clear_Plot):\n",
+    "def plot_RC(L_um,porosity,vol_frac_cond,Clear_Plot,metric):\n",
     "    if Clear_Plot:\n",
     "        ax.clear()\n",
     "    e1 = electrode(L=L_um,eps=porosity,vfc=vol_frac_cond)\n",
-    "    RC_df = e1.rate_capability(ax)\n",
+    "    RC_df = e1.rate_capability(ax,metric=metric)\n",
     "    ax.grid(True)\n",
     "    \n",
     "    colors = plt.cm.plasma(np.linspace(0.3,1,len(ax.lines)))\n",
@@ -348,6 +370,91 @@
     "        l.set_color(c)\n",
     "        \n",
     "    ax.legend(loc='center left', bbox_to_anchor=(1, 0.5),frameon=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/karthikmayilvahanan/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:8: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n",
+      "  \n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b362f25eae004ed9be5c388b0cd7415e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e8284e6bc53c45ac856d7605a7a4eb33",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(FloatSlider(value=0.5, continuous_update=False, description='Porosity:', max=0.9, min=0.1, read…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# button = widgets.Button(description='Plot')\n",
+    "\n",
+    "# def plot_on_click(button):\n",
+    "#     if button:\n",
+    "#         plot_RC2()\n",
+    "    \n",
+    "    \n",
+    "# fig2, ax2 = plt.subplots(1, 1, figsize=(10, 4),constrained_layout=True)\n",
+    "# fig2.suptitle('Rate Capability')\n",
+    "\n",
+    "# button2 = widgets.Button(description='Clear')\n",
+    "# # @button2.onclick\n",
+    "# def clear_plot(button2):\n",
+    "#     if button2:\n",
+    "#         ax2.clear()\n",
+    "\n",
+    "# choose_eps=widgets.FloatSlider(value=0.5,min=0.1,max=0.9,step=0.01,\n",
+    "#     description='Porosity:',disabled=False,continuous_update=False,\n",
+    "#     orientation='horizontal',readout=True,readout_format='.1f')\n",
+    "# choose_L=widgets.FloatSlider(value=100,min=50,max=500,step=10,\n",
+    "#     description='Electrode Length (um):',disabled=False,continuous_update=False,\n",
+    "#     orientation='horizontal',readout=True,readout_format='.1f')\n",
+    "# choose_vfc=widgets.FloatSlider(value=0.07,min=0.01,max=0.2,step=0.01,\n",
+    "#     description='Volume Fraction of Conductor:',disabled=False,continuous_update=False,\n",
+    "#     orientation='horizontal',readout=True,readout_format='.1f')\n",
+    "\n",
+    "# def plot_RC2(b=None):\n",
+    "#     e1 = electrode(L=choose_L.value,eps=choose_eps.value,vfc=choose_vfc.value)\n",
+    "\n",
+    "#     t = np.linspace(xlim[0], xlim[1], 1000)\n",
+    "#     RC_df = e1.rate_capability(ax2)\n",
+    "#     ax2.grid(True)\n",
+    "    \n",
+    "#     colors = plt.cm.plasma(np.linspace(0.3,1,len(ax2.lines)))\n",
+    "#     for l,c in zip(ax.lines,colors):\n",
+    "#         l.set_color(c)\n",
+    "        \n",
+    "#     ax2.legend(loc='center left', bbox_to_anchor=(1, 0.5),frameon=False)\n",
+    "    \n",
+    "# display(widgets.VBox([choose_eps,choose_L,choose_vfc,button,button2]))"
    ]
   },
   {
