show data for contour plots

--- a/LVO Electrode Design Tool.ipynb
+++ b/LVO Electrode Design Tool.ipynb
@@ -389,7 +389,7 @@
    "source": [
     "# More Detailed Design Guides\n",
     "\n",
-    "To get a better, more quantitative understanding of the sensitivity of performance to the three design parameters, you can pick a desired performance metric, hold one of the three design parameters fixed, and see a contour map for how the performance depends on the remaining two design parameters."
+    "To get a better, more quantitative understanding of the sensitivity of performance to the three design parameters, you can pick a desired **performance metric**, choose a **C-rate**, hold one of the three design parameters fixed, and see a contour map for how the performance depends on the remaining two design parameters."
    ]
   },
   {
@@ -437,13 +437,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4dd691867ba74c08a47b30c78ff34282",
+       "model_id": "d68d32c84ffe4bd286a69d4693caecac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -457,7 +457,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "76d9a0a0645447cca46f268b4037fa1b",
+       "model_id": "93f596c5cd6b4453acfcba614d86f08e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -511,6 +511,7 @@
     "    Z = pivtab.T.values\n",
     "    Z = fill_gaps(Z)\n",
     "    pivtab = pd.DataFrame(Z.T,columns=pivtab.columns,index=pivtab.index.values)\n",
+    "    pivtab.index.name = cols[0]\n",
     "    \n",
     "    if output == cap_col:\n",
     "        output_label = output\n",
@@ -552,7 +553,8 @@
     "    \n",
     "        fig3.suptitle(output_label,fontsize=15)\n",
     "        \n",
-    "        display(pivtab)\n",
+    "        print('Data for the graph above:')\n",
+    "        display(pivtab.round(0))\n",
     "    \n",
     "\n",
     "widgets.interact(filter_sims,output = choose_opt,\n",
@@ -560,13 +562,6 @@
     "                     fixed_col = choose_fixed_col,\n",
     "                     fixed_col_val = choose_fixed_col_val);"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
